get msgtree from be
